// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<HorizontalAutoScroller /> > should match the snapshot for 8 items 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <div
    class="reset_block__1oah0224 sprinkles_alignItems_stretch_mobile__onxwjui2 sprinkles_display_flex_mobile__onxwju7y sprinkles_flexDirection_column_mobile__onxwjukm sprinkles_gap_5_mobile__onxwjueq"
    data-od-component="horizontal-auto-scroller"
  >
    <div
      class="reset_block__1oah0224 sprinkles_overflow_hidden_mobile__onxwju8m sprinkles_position_relative_mobile__onxwju9m"
    >
      <div
        class="reset_block__1oah0224 sprinkles_display_flex_mobile__onxwju7y sprinkles_alignItems_center_mobile__onxwjuhq sprinkles_justifyContent_flex-start_mobile__onxwjui6 sprinkles_position_absolute_mobile__onxwju9q HorizontalAutoScroller_controllerBtn__2i92q00 HorizontalAutoScroller_prevBtn__2i92q02"
      >
        <button
          class="reset_appearance__1oah0221 reset_cursorPointer__1oah0222 reset_trimmedBlockElement__1oah0226 reset_button__1oah0227 sprinkles_borderBottomStyle_solid__onxwju21 sprinkles_borderLeftStyle_solid__onxwju1z sprinkles_borderRightStyle_solid__onxwju23 sprinkles_borderTopStyle_solid__onxwju25 sprinkles_borderBottomWidth_none__onxwju1p sprinkles_borderLeftWidth_none__onxwju1l sprinkles_borderRightWidth_none__onxwju1t sprinkles_borderTopWidth_none__onxwju1x sprinkles_borderRadius_pill__onxwju8 sprinkles_paddingLeft_4_mobile__onxwjuoy sprinkles_paddingRight_4_mobile__onxwjuq2 sprinkles_paddingTop_none_mobile__onxwjuru sprinkles_paddingBottom_none_mobile__onxwjuoi sprinkles_display_inline-block_mobile__onxwju8a sprinkles_overflow_hidden_mobile__onxwju8m sprinkles_textAlign_center_mobile__onxwjua6 useTextStyles_root__1xnpmd70 reset_block__1oah0224 useTextStyles_colours_white__1xnpmd7g useTextStyles_fontWeight_semiBold__1xnpmd7q useTextStyles_sizes_4__1xnpmd74 Button_button__p2yon53 focusOutline_focusOutlineStyle__tq83zq0 Button_button_size_medium__p2yon55 Button_button_shape_iconOnly__p2yon59 Button_button_intent_secondary__p2yon5c Button_button_minimal_false__p2yon5i Button_button_compound_5__p2yon5o"
          type="button"
        >
          <div
            class="reset_block__1oah0224 sprinkles_height_full_mobile__onxwjubq sprinkles_alignItems_center_mobile__onxwjuhq sprinkles_justifyContent_center_mobile__onxwjuia Button_body__p2yon50"
          >
            <span
              class="reset_inlineText__1oah0223 sprinkles_display_block_mobile__onxwju7q Icon_makeResponsiveStyle_key_bp__1gy3ire4"
            >
              <svg
                aria-hidden="true"
                class="sprinkles_display_block_mobile__onxwju7q sprinkles_width_full_mobile__onxwjuda sprinkles_height_full_mobile__onxwjubq"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15.414 16.584l-4.586-4.586 4.586-4.586-1.415-1.414-6 6 6 6 1.415-1.414z"
                />
              </svg>
            </span>
          </div>
        </button>
      </div>
      <div
        class="reset_block__1oah0224 sprinkles_paddingLeft_7_mobile__onxwjupa sprinkles_paddingLeft_8_tablet__onxwjupf sprinkles_paddingRight_7_mobile__onxwjuqe sprinkles_paddingRight_8_tablet__onxwjuqj sprinkles_alignItems_stretch_mobile__onxwjui2 sprinkles_display_flex_mobile__onxwju7y sprinkles_overflow_hidden_mobile__onxwju8m sprinkles_flexWrap_nowrap_mobile__onxwjule sprinkles_width_full_mobile__onxwjuda sprinkles_gap_7_mobile__onxwjuey sprinkles_gap_5_tablet__onxwjuer"
      >
        <div
          class="reset_block__1oah0224 HorizontalAutoScroller_controllerCol__2i92q01"
        >
          <span />
        </div>
        <div
          class="reset_block__1oah0224 sprinkles_flexGrow_0_mobile__onxwjuky sprinkles_flexShrink_0_mobile__onxwjul6 sprinkles_alignSelf_stretch_mobile__onxwjuk2 HorizontalAutoScroller_itemMinWidth__2i92q04 HorizontalAutoScroller_flexBasis_1/2_mobile__2i92q07"
        >
          <div
            class="reset_block__1oah0224 sprinkles_display_flex_mobile__onxwju7y sprinkles_height_full_mobile__onxwjubq sprinkles_width_full_mobile__onxwjuda"
          >
            <div
              class="reset_block__1oah0224 sprinkles_width_full_mobile__onxwjuda HorizontalAutoScroller_item__2i92q05 HorizontalAutoScroller_active__2i92q06"
            >
              <span />
            </div>
          </div>
        </div>
        <div
          class="reset_block__1oah0224 sprinkles_flexGrow_0_mobile__onxwjuky sprinkles_flexShrink_0_mobile__onxwjul6 sprinkles_alignSelf_stretch_mobile__onxwjuk2 HorizontalAutoScroller_itemMinWidth__2i92q04 HorizontalAutoScroller_flexBasis_1/2_mobile__2i92q07"
        >
          <div
            class="reset_block__1oah0224 sprinkles_display_flex_mobile__onxwju7y sprinkles_height_full_mobile__onxwjubq sprinkles_width_full_mobile__onxwjuda"
          >
            <div
              class="reset_block__1oah0224 sprinkles_width_full_mobile__onxwjuda HorizontalAutoScroller_item__2i92q05"
            >
              <span />
            </div>
          </div>
        </div>
        <div
          class="reset_block__1oah0224 sprinkles_flexGrow_0_mobile__onxwjuky sprinkles_flexShrink_0_mobile__onxwjul6 sprinkles_alignSelf_stretch_mobile__onxwjuk2 HorizontalAutoScroller_itemMinWidth__2i92q04 HorizontalAutoScroller_flexBasis_1/2_mobile__2i92q07"
        >
          <div
            class="reset_block__1oah0224 sprinkles_display_flex_mobile__onxwju7y sprinkles_height_full_mobile__onxwjubq sprinkles_width_full_mobile__onxwjuda"
          >
            <div
              class="reset_block__1oah0224 sprinkles_width_full_mobile__onxwjuda HorizontalAutoScroller_item__2i92q05"
            >
              <span />
            </div>
          </div>
        </div>
        <div
          class="reset_block__1oah0224 sprinkles_flexGrow_0_mobile__onxwjuky sprinkles_flexShrink_0_mobile__onxwjul6 sprinkles_alignSelf_stretch_mobile__onxwjuk2 HorizontalAutoScroller_itemMinWidth__2i92q04 HorizontalAutoScroller_flexBasis_1/2_mobile__2i92q07"
        >
          <div
            class="reset_block__1oah0224 sprinkles_display_flex_mobile__onxwju7y sprinkles_height_full_mobile__onxwjubq sprinkles_width_full_mobile__onxwjuda"
          >
            <div
              class="reset_block__1oah0224 sprinkles_width_full_mobile__onxwjuda HorizontalAutoScroller_item__2i92q05"
            >
              <span />
            </div>
          </div>
        </div>
        <div
          class="reset_block__1oah0224 sprinkles_flexGrow_0_mobile__onxwjuky sprinkles_flexShrink_0_mobile__onxwjul6 sprinkles_alignSelf_stretch_mobile__onxwjuk2 HorizontalAutoScroller_itemMinWidth__2i92q04 HorizontalAutoScroller_flexBasis_1/2_mobile__2i92q07"
        >
          <div
            class="reset_block__1oah0224 sprinkles_display_flex_mobile__onxwju7y sprinkles_height_full_mobile__onxwjubq sprinkles_width_full_mobile__onxwjuda"
          >
            <div
              class="reset_block__1oah0224 sprinkles_width_full_mobile__onxwjuda HorizontalAutoScroller_item__2i92q05"
            >
              <span />
            </div>
          </div>
        </div>
        <div
          class="reset_block__1oah0224 sprinkles_flexGrow_0_mobile__onxwjuky sprinkles_flexShrink_0_mobile__onxwjul6 sprinkles_alignSelf_stretch_mobile__onxwjuk2 HorizontalAutoScroller_itemMinWidth__2i92q04 HorizontalAutoScroller_flexBasis_1/2_mobile__2i92q07"
        >
          <div
            class="reset_block__1oah0224 sprinkles_display_flex_mobile__onxwju7y sprinkles_height_full_mobile__onxwjubq sprinkles_width_full_mobile__onxwjuda"
          >
            <div
              class="reset_block__1oah0224 sprinkles_width_full_mobile__onxwjuda HorizontalAutoScroller_item__2i92q05"
            >
              <span />
            </div>
          </div>
        </div>
        <div
          class="reset_block__1oah0224 sprinkles_flexGrow_0_mobile__onxwjuky sprinkles_flexShrink_0_mobile__onxwjul6 sprinkles_alignSelf_stretch_mobile__onxwjuk2 HorizontalAutoScroller_itemMinWidth__2i92q04 HorizontalAutoScroller_flexBasis_1/2_mobile__2i92q07"
        >
          <div
            class="reset_block__1oah0224 sprinkles_display_flex_mobile__onxwju7y sprinkles_height_full_mobile__onxwjubq sprinkles_width_full_mobile__onxwjuda"
          >
            <div
              class="reset_block__1oah0224 sprinkles_width_full_mobile__onxwjuda HorizontalAutoScroller_item__2i92q05"
            >
              <span />
            </div>
          </div>
        </div>
        <div
          class="reset_block__1oah0224 sprinkles_flexGrow_0_mobile__onxwjuky sprinkles_flexShrink_0_mobile__onxwjul6 sprinkles_alignSelf_stretch_mobile__onxwjuk2 HorizontalAutoScroller_itemMinWidth__2i92q04 HorizontalAutoScroller_flexBasis_1/2_mobile__2i92q07"
        >
          <div
            class="reset_block__1oah0224 sprinkles_display_flex_mobile__onxwju7y sprinkles_height_full_mobile__onxwjubq sprinkles_width_full_mobile__onxwjuda"
          >
            <div
              class="reset_block__1oah0224 sprinkles_width_full_mobile__onxwjuda HorizontalAutoScroller_item__2i92q05"
            >
              <span />
            </div>
          </div>
        </div>
        <div
          class="reset_block__1oah0224 HorizontalAutoScroller_controllerCol__2i92q01"
        >
          <span />
        </div>
      </div>
      <div
        class="reset_block__1oah0224 sprinkles_display_flex_mobile__onxwju7y sprinkles_alignItems_center_mobile__onxwjuhq sprinkles_justifyContent_flex-end_mobile__onxwjuie sprinkles_position_absolute_mobile__onxwju9q HorizontalAutoScroller_controllerBtn__2i92q00 HorizontalAutoScroller_nextBtn__2i92q03"
      >
        <button
          class="reset_appearance__1oah0221 reset_cursorPointer__1oah0222 reset_trimmedBlockElement__1oah0226 reset_button__1oah0227 sprinkles_borderBottomStyle_solid__onxwju21 sprinkles_borderLeftStyle_solid__onxwju1z sprinkles_borderRightStyle_solid__onxwju23 sprinkles_borderTopStyle_solid__onxwju25 sprinkles_borderBottomWidth_none__onxwju1p sprinkles_borderLeftWidth_none__onxwju1l sprinkles_borderRightWidth_none__onxwju1t sprinkles_borderTopWidth_none__onxwju1x sprinkles_borderRadius_pill__onxwju8 sprinkles_paddingLeft_4_mobile__onxwjuoy sprinkles_paddingRight_4_mobile__onxwjuq2 sprinkles_paddingTop_none_mobile__onxwjuru sprinkles_paddingBottom_none_mobile__onxwjuoi sprinkles_display_inline-block_mobile__onxwju8a sprinkles_overflow_hidden_mobile__onxwju8m sprinkles_textAlign_center_mobile__onxwjua6 useTextStyles_root__1xnpmd70 reset_block__1oah0224 useTextStyles_colours_white__1xnpmd7g useTextStyles_fontWeight_semiBold__1xnpmd7q useTextStyles_sizes_4__1xnpmd74 Button_button__p2yon53 focusOutline_focusOutlineStyle__tq83zq0 Button_button_size_medium__p2yon55 Button_button_shape_iconOnly__p2yon59 Button_button_intent_secondary__p2yon5c Button_button_minimal_false__p2yon5i Button_button_compound_5__p2yon5o"
          type="button"
        >
          <div
            class="reset_block__1oah0224 sprinkles_height_full_mobile__onxwjubq sprinkles_alignItems_center_mobile__onxwjuhq sprinkles_justifyContent_center_mobile__onxwjuia Button_body__p2yon50"
          >
            <span
              class="reset_inlineText__1oah0223 sprinkles_display_block_mobile__onxwju7q Icon_makeResponsiveStyle_key_bp__1gy3ire4"
            >
              <svg
                aria-hidden="true"
                class="sprinkles_display_block_mobile__onxwju7q sprinkles_width_full_mobile__onxwjuda sprinkles_height_full_mobile__onxwjubq"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.585 16.584l4.586-4.586-4.586-4.586L10 5.998l6 6-6 6-1.414-1.414z"
                />
              </svg>
            </span>
          </div>
        </button>
      </div>
    </div>
    <div
      class="reset_block__1oah0224"
    >
      <div
        class="reset_block__1oah0224 sprinkles_maxWidth_small_mobile__onxwjudi sprinkles_width_full_mobile__onxwjuda Section_root__184s6x60"
      >
        <div
          class="SliderProgress_root__17uw35s0"
          style="grid-template-columns: repeat(8, 1fr);"
        >
          <div
            class="reset_block__1oah0224 sprinkles_position_relative_mobile__onxwju9m SliderProgress_step__17uw35s1"
          >
            <div
              class="reset_block__1oah0224 sprinkles_position_absolute_mobile__onxwju9q sprinkles_display_block_mobile__onxwju7q sprinkles_backgroundColor_primary__onxwju3m ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
            />
            <div
              class="reset_block__1oah0224 sprinkles_position_absolute_mobile__onxwju9q sprinkles_display_block_mobile__onxwju7q sprinkles_backgroundColor_primary__onxwju3m ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3 ProgressStep_active__15qfq7e4 ProgressStep_paused__15qfq7e5"
              style="animation-duration: 10s;"
            />
          </div>
          <div
            class="reset_block__1oah0224 sprinkles_position_relative_mobile__onxwju9m SliderProgress_step__17uw35s1"
          >
            <div
              class="reset_block__1oah0224 sprinkles_position_absolute_mobile__onxwju9q sprinkles_display_block_mobile__onxwju7q sprinkles_backgroundColor_primary__onxwju3m ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
            />
            <div
              class="reset_block__1oah0224 sprinkles_position_absolute_mobile__onxwju9q sprinkles_display_none_mobile__onxwju7m sprinkles_backgroundColor_primary__onxwju3m ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
              style="animation-duration: 10s;"
            />
          </div>
          <div
            class="reset_block__1oah0224 sprinkles_position_relative_mobile__onxwju9m SliderProgress_step__17uw35s1"
          >
            <div
              class="reset_block__1oah0224 sprinkles_position_absolute_mobile__onxwju9q sprinkles_display_block_mobile__onxwju7q sprinkles_backgroundColor_primary__onxwju3m ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
            />
            <div
              class="reset_block__1oah0224 sprinkles_position_absolute_mobile__onxwju9q sprinkles_display_none_mobile__onxwju7m sprinkles_backgroundColor_primary__onxwju3m ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
              style="animation-duration: 10s;"
            />
          </div>
          <div
            class="reset_block__1oah0224 sprinkles_position_relative_mobile__onxwju9m SliderProgress_step__17uw35s1"
          >
            <div
              class="reset_block__1oah0224 sprinkles_position_absolute_mobile__onxwju9q sprinkles_display_block_mobile__onxwju7q sprinkles_backgroundColor_primary__onxwju3m ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
            />
            <div
              class="reset_block__1oah0224 sprinkles_position_absolute_mobile__onxwju9q sprinkles_display_none_mobile__onxwju7m sprinkles_backgroundColor_primary__onxwju3m ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
              style="animation-duration: 10s;"
            />
          </div>
          <div
            class="reset_block__1oah0224 sprinkles_position_relative_mobile__onxwju9m SliderProgress_step__17uw35s1"
          >
            <div
              class="reset_block__1oah0224 sprinkles_position_absolute_mobile__onxwju9q sprinkles_display_block_mobile__onxwju7q sprinkles_backgroundColor_primary__onxwju3m ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
            />
            <div
              class="reset_block__1oah0224 sprinkles_position_absolute_mobile__onxwju9q sprinkles_display_none_mobile__onxwju7m sprinkles_backgroundColor_primary__onxwju3m ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
              style="animation-duration: 10s;"
            />
          </div>
          <div
            class="reset_block__1oah0224 sprinkles_position_relative_mobile__onxwju9m SliderProgress_step__17uw35s1"
          >
            <div
              class="reset_block__1oah0224 sprinkles_position_absolute_mobile__onxwju9q sprinkles_display_block_mobile__onxwju7q sprinkles_backgroundColor_primary__onxwju3m ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
            />
            <div
              class="reset_block__1oah0224 sprinkles_position_absolute_mobile__onxwju9q sprinkles_display_none_mobile__onxwju7m sprinkles_backgroundColor_primary__onxwju3m ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
              style="animation-duration: 10s;"
            />
          </div>
          <div
            class="reset_block__1oah0224 sprinkles_position_relative_mobile__onxwju9m SliderProgress_step__17uw35s1"
          >
            <div
              class="reset_block__1oah0224 sprinkles_position_absolute_mobile__onxwju9q sprinkles_display_block_mobile__onxwju7q sprinkles_backgroundColor_primary__onxwju3m ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
            />
            <div
              class="reset_block__1oah0224 sprinkles_position_absolute_mobile__onxwju9q sprinkles_display_none_mobile__onxwju7m sprinkles_backgroundColor_primary__onxwju3m ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
              style="animation-duration: 10s;"
            />
          </div>
          <div
            class="reset_block__1oah0224 sprinkles_position_relative_mobile__onxwju9m SliderProgress_step__17uw35s1"
          >
            <div
              class="reset_block__1oah0224 sprinkles_position_absolute_mobile__onxwju9q sprinkles_display_block_mobile__onxwju7q sprinkles_backgroundColor_primary__onxwju3m ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
            />
            <div
              class="reset_block__1oah0224 sprinkles_position_absolute_mobile__onxwju9q sprinkles_display_none_mobile__onxwju7m sprinkles_backgroundColor_primary__onxwju3m ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
              style="animation-duration: 10s;"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<HorizontalAutoScroller /> > should match the snapshot with custom slider colour 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <div
    class="reset_block__1oah0224 sprinkles_alignItems_stretch_mobile__onxwjui2 sprinkles_display_flex_mobile__onxwju7y sprinkles_flexDirection_column_mobile__onxwjukm sprinkles_gap_5_mobile__onxwjueq"
    data-od-component="horizontal-auto-scroller"
  >
    <div
      class="reset_block__1oah0224 sprinkles_overflow_hidden_mobile__onxwju8m sprinkles_position_relative_mobile__onxwju9m"
    >
      <div
        class="reset_block__1oah0224 sprinkles_display_flex_mobile__onxwju7y sprinkles_alignItems_center_mobile__onxwjuhq sprinkles_justifyContent_flex-start_mobile__onxwjui6 sprinkles_position_absolute_mobile__onxwju9q HorizontalAutoScroller_controllerBtn__2i92q00 HorizontalAutoScroller_prevBtn__2i92q02"
      >
        <button
          class="reset_appearance__1oah0221 reset_cursorPointer__1oah0222 reset_trimmedBlockElement__1oah0226 reset_button__1oah0227 sprinkles_borderBottomStyle_solid__onxwju21 sprinkles_borderLeftStyle_solid__onxwju1z sprinkles_borderRightStyle_solid__onxwju23 sprinkles_borderTopStyle_solid__onxwju25 sprinkles_borderBottomWidth_none__onxwju1p sprinkles_borderLeftWidth_none__onxwju1l sprinkles_borderRightWidth_none__onxwju1t sprinkles_borderTopWidth_none__onxwju1x sprinkles_borderRadius_pill__onxwju8 sprinkles_paddingLeft_4_mobile__onxwjuoy sprinkles_paddingRight_4_mobile__onxwjuq2 sprinkles_paddingTop_none_mobile__onxwjuru sprinkles_paddingBottom_none_mobile__onxwjuoi sprinkles_display_inline-block_mobile__onxwju8a sprinkles_overflow_hidden_mobile__onxwju8m sprinkles_textAlign_center_mobile__onxwjua6 useTextStyles_root__1xnpmd70 reset_block__1oah0224 useTextStyles_colours_white__1xnpmd7g useTextStyles_fontWeight_semiBold__1xnpmd7q useTextStyles_sizes_4__1xnpmd74 Button_button__p2yon53 focusOutline_focusOutlineStyle__tq83zq0 Button_button_size_medium__p2yon55 Button_button_shape_iconOnly__p2yon59 Button_button_intent_secondary__p2yon5c Button_button_minimal_false__p2yon5i Button_button_compound_5__p2yon5o"
          type="button"
        >
          <div
            class="reset_block__1oah0224 sprinkles_height_full_mobile__onxwjubq sprinkles_alignItems_center_mobile__onxwjuhq sprinkles_justifyContent_center_mobile__onxwjuia Button_body__p2yon50"
          >
            <span
              class="reset_inlineText__1oah0223 sprinkles_display_block_mobile__onxwju7q Icon_makeResponsiveStyle_key_bp__1gy3ire4"
            >
              <svg
                aria-hidden="true"
                class="sprinkles_display_block_mobile__onxwju7q sprinkles_width_full_mobile__onxwjuda sprinkles_height_full_mobile__onxwjubq"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15.414 16.584l-4.586-4.586 4.586-4.586-1.415-1.414-6 6 6 6 1.415-1.414z"
                />
              </svg>
            </span>
          </div>
        </button>
      </div>
      <div
        class="reset_block__1oah0224 sprinkles_paddingLeft_7_mobile__onxwjupa sprinkles_paddingLeft_8_tablet__onxwjupf sprinkles_paddingRight_7_mobile__onxwjuqe sprinkles_paddingRight_8_tablet__onxwjuqj sprinkles_alignItems_stretch_mobile__onxwjui2 sprinkles_display_flex_mobile__onxwju7y sprinkles_overflow_hidden_mobile__onxwju8m sprinkles_flexWrap_nowrap_mobile__onxwjule sprinkles_width_full_mobile__onxwjuda sprinkles_gap_7_mobile__onxwjuey sprinkles_gap_5_tablet__onxwjuer"
      >
        <div
          class="reset_block__1oah0224 HorizontalAutoScroller_controllerCol__2i92q01"
        >
          <span />
        </div>
        <div
          class="reset_block__1oah0224 sprinkles_flexGrow_0_mobile__onxwjuky sprinkles_flexShrink_0_mobile__onxwjul6 sprinkles_alignSelf_stretch_mobile__onxwjuk2 HorizontalAutoScroller_itemMinWidth__2i92q04 HorizontalAutoScroller_flexBasis_1/2_mobile__2i92q07"
        >
          <div
            class="reset_block__1oah0224 sprinkles_display_flex_mobile__onxwju7y sprinkles_height_full_mobile__onxwjubq sprinkles_width_full_mobile__onxwjuda"
          >
            <div
              class="reset_block__1oah0224 sprinkles_width_full_mobile__onxwjuda HorizontalAutoScroller_item__2i92q05 HorizontalAutoScroller_active__2i92q06"
            >
              <span />
            </div>
          </div>
        </div>
        <div
          class="reset_block__1oah0224 sprinkles_flexGrow_0_mobile__onxwjuky sprinkles_flexShrink_0_mobile__onxwjul6 sprinkles_alignSelf_stretch_mobile__onxwjuk2 HorizontalAutoScroller_itemMinWidth__2i92q04 HorizontalAutoScroller_flexBasis_1/2_mobile__2i92q07"
        >
          <div
            class="reset_block__1oah0224 sprinkles_display_flex_mobile__onxwju7y sprinkles_height_full_mobile__onxwjubq sprinkles_width_full_mobile__onxwjuda"
          >
            <div
              class="reset_block__1oah0224 sprinkles_width_full_mobile__onxwjuda HorizontalAutoScroller_item__2i92q05"
            >
              <span />
            </div>
          </div>
        </div>
        <div
          class="reset_block__1oah0224 sprinkles_flexGrow_0_mobile__onxwjuky sprinkles_flexShrink_0_mobile__onxwjul6 sprinkles_alignSelf_stretch_mobile__onxwjuk2 HorizontalAutoScroller_itemMinWidth__2i92q04 HorizontalAutoScroller_flexBasis_1/2_mobile__2i92q07"
        >
          <div
            class="reset_block__1oah0224 sprinkles_display_flex_mobile__onxwju7y sprinkles_height_full_mobile__onxwjubq sprinkles_width_full_mobile__onxwjuda"
          >
            <div
              class="reset_block__1oah0224 sprinkles_width_full_mobile__onxwjuda HorizontalAutoScroller_item__2i92q05"
            >
              <span />
            </div>
          </div>
        </div>
        <div
          class="reset_block__1oah0224 sprinkles_flexGrow_0_mobile__onxwjuky sprinkles_flexShrink_0_mobile__onxwjul6 sprinkles_alignSelf_stretch_mobile__onxwjuk2 HorizontalAutoScroller_itemMinWidth__2i92q04 HorizontalAutoScroller_flexBasis_1/2_mobile__2i92q07"
        >
          <div
            class="reset_block__1oah0224 sprinkles_display_flex_mobile__onxwju7y sprinkles_height_full_mobile__onxwjubq sprinkles_width_full_mobile__onxwjuda"
          >
            <div
              class="reset_block__1oah0224 sprinkles_width_full_mobile__onxwjuda HorizontalAutoScroller_item__2i92q05"
            >
              <span />
            </div>
          </div>
        </div>
        <div
          class="reset_block__1oah0224 HorizontalAutoScroller_controllerCol__2i92q01"
        >
          <span />
        </div>
      </div>
      <div
        class="reset_block__1oah0224 sprinkles_display_flex_mobile__onxwju7y sprinkles_alignItems_center_mobile__onxwjuhq sprinkles_justifyContent_flex-end_mobile__onxwjuie sprinkles_position_absolute_mobile__onxwju9q HorizontalAutoScroller_controllerBtn__2i92q00 HorizontalAutoScroller_nextBtn__2i92q03"
      >
        <button
          class="reset_appearance__1oah0221 reset_cursorPointer__1oah0222 reset_trimmedBlockElement__1oah0226 reset_button__1oah0227 sprinkles_borderBottomStyle_solid__onxwju21 sprinkles_borderLeftStyle_solid__onxwju1z sprinkles_borderRightStyle_solid__onxwju23 sprinkles_borderTopStyle_solid__onxwju25 sprinkles_borderBottomWidth_none__onxwju1p sprinkles_borderLeftWidth_none__onxwju1l sprinkles_borderRightWidth_none__onxwju1t sprinkles_borderTopWidth_none__onxwju1x sprinkles_borderRadius_pill__onxwju8 sprinkles_paddingLeft_4_mobile__onxwjuoy sprinkles_paddingRight_4_mobile__onxwjuq2 sprinkles_paddingTop_none_mobile__onxwjuru sprinkles_paddingBottom_none_mobile__onxwjuoi sprinkles_display_inline-block_mobile__onxwju8a sprinkles_overflow_hidden_mobile__onxwju8m sprinkles_textAlign_center_mobile__onxwjua6 useTextStyles_root__1xnpmd70 reset_block__1oah0224 useTextStyles_colours_white__1xnpmd7g useTextStyles_fontWeight_semiBold__1xnpmd7q useTextStyles_sizes_4__1xnpmd74 Button_button__p2yon53 focusOutline_focusOutlineStyle__tq83zq0 Button_button_size_medium__p2yon55 Button_button_shape_iconOnly__p2yon59 Button_button_intent_secondary__p2yon5c Button_button_minimal_false__p2yon5i Button_button_compound_5__p2yon5o"
          type="button"
        >
          <div
            class="reset_block__1oah0224 sprinkles_height_full_mobile__onxwjubq sprinkles_alignItems_center_mobile__onxwjuhq sprinkles_justifyContent_center_mobile__onxwjuia Button_body__p2yon50"
          >
            <span
              class="reset_inlineText__1oah0223 sprinkles_display_block_mobile__onxwju7q Icon_makeResponsiveStyle_key_bp__1gy3ire4"
            >
              <svg
                aria-hidden="true"
                class="sprinkles_display_block_mobile__onxwju7q sprinkles_width_full_mobile__onxwjuda sprinkles_height_full_mobile__onxwjubq"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.585 16.584l4.586-4.586-4.586-4.586L10 5.998l6 6-6 6-1.414-1.414z"
                />
              </svg>
            </span>
          </div>
        </button>
      </div>
    </div>
    <div
      class="reset_block__1oah0224"
    >
      <div
        class="reset_block__1oah0224 sprinkles_maxWidth_small_mobile__onxwjudi sprinkles_width_full_mobile__onxwjuda Section_root__184s6x60"
      >
        <div
          class="SliderProgress_root__17uw35s0"
          style="grid-template-columns: repeat(4, 1fr);"
        >
          <div
            class="reset_block__1oah0224 sprinkles_position_relative_mobile__onxwju9m SliderProgress_step__17uw35s1"
          >
            <div
              class="reset_block__1oah0224 sprinkles_position_absolute_mobile__onxwju9q sprinkles_display_block_mobile__onxwju7q sprinkles_backgroundColor_yellow500__onxwju4z ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
            />
            <div
              class="reset_block__1oah0224 sprinkles_position_absolute_mobile__onxwju9q sprinkles_display_block_mobile__onxwju7q sprinkles_backgroundColor_yellow500__onxwju4z ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3 ProgressStep_active__15qfq7e4 ProgressStep_paused__15qfq7e5"
              style="animation-duration: 10s;"
            />
          </div>
          <div
            class="reset_block__1oah0224 sprinkles_position_relative_mobile__onxwju9m SliderProgress_step__17uw35s1"
          >
            <div
              class="reset_block__1oah0224 sprinkles_position_absolute_mobile__onxwju9q sprinkles_display_block_mobile__onxwju7q sprinkles_backgroundColor_yellow500__onxwju4z ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
            />
            <div
              class="reset_block__1oah0224 sprinkles_position_absolute_mobile__onxwju9q sprinkles_display_none_mobile__onxwju7m sprinkles_backgroundColor_yellow500__onxwju4z ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
              style="animation-duration: 10s;"
            />
          </div>
          <div
            class="reset_block__1oah0224 sprinkles_position_relative_mobile__onxwju9m SliderProgress_step__17uw35s1"
          >
            <div
              class="reset_block__1oah0224 sprinkles_position_absolute_mobile__onxwju9q sprinkles_display_block_mobile__onxwju7q sprinkles_backgroundColor_yellow500__onxwju4z ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
            />
            <div
              class="reset_block__1oah0224 sprinkles_position_absolute_mobile__onxwju9q sprinkles_display_none_mobile__onxwju7m sprinkles_backgroundColor_yellow500__onxwju4z ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
              style="animation-duration: 10s;"
            />
          </div>
          <div
            class="reset_block__1oah0224 sprinkles_position_relative_mobile__onxwju9m SliderProgress_step__17uw35s1"
          >
            <div
              class="reset_block__1oah0224 sprinkles_position_absolute_mobile__onxwju9q sprinkles_display_block_mobile__onxwju7q sprinkles_backgroundColor_yellow500__onxwju4z ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
            />
            <div
              class="reset_block__1oah0224 sprinkles_position_absolute_mobile__onxwju9q sprinkles_display_none_mobile__onxwju7m sprinkles_backgroundColor_yellow500__onxwju4z ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
              style="animation-duration: 10s;"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
